# xypi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  jsapi_cmd.cpp  jsapi_cmd.h  jsapi_cmdq.h  jsapi_work.cpp  jsapi_work.h  jsapi_worker.cpp  jsapi_worker.h  jsapi_workq.h  json_handler.cpp  json_handler.h  jsonutil.cpp  jsonutil.h  message.h  midi_worker.cpp  midi_worker.h  osc_api.cpp  osc_api.h  osc_cmd.h  osc_cmdq.h  osc_handler.cpp  osc_handler.h  osc_server.cpp  osc_server.h  osc_work.h  osc_worker.cpp  osc_worker.h  osc_workq.h  pi_spi.cpp  pi_spi.h  work.cpp  work.h  worker.cpp  worker.h  workqueue.h  ws_request_handler.cpp  ws_request_handler.h  (+18 more)
frontend/: index.html
locked/: map.h  queue.h
script/: ls_alsa.sh  octo_cnx.sh  start_jack.sh
xypi/: .cproject  .project  spec.d
